refactoring du code suivant pylint

--- a/resources/pylint.cfg
+++ b/resources/pylint.cfg
@@ -190,8 +190,7 @@ ignore-docstrings=yes
 # Ignore imports when computing similarities.
 ignore-imports=no
 
-# Minimum lines number of a similarity.
-min-similarity-lines=4
+# Minimum lines number of a similaritymin-similarity-lines=0
 
 
 [FORMAT]
@@ -335,7 +334,7 @@ const-naming-style=UPPER_CASE
 
 # Minimum line length for functions/classes that require docstrings, shorter
 # ones are exempt.
-docstring-min-length=-1
+docstrinmin-length=-0
 
 # Naming style matching correct function names
 function-naming-style=camelCase
@@ -481,7 +480,7 @@ max-returns=6
 max-statements=50
 
 # Minimum number of public methods for a class (see R0903).
-min-public-methods=2
+min-public-methods=0
 
 
 [CLASSES]
